2007-03-20 Andi Salzburger <Anreas.Salzburger@cern.ch>
        * first configurable version
        * tagged as MuonTrackingGeometry-00-00-37

2007-03-14 Sarka Todorova <sarka.todorova@cern.ch>
	* temporary(?) fix of retrieval of BOG stations with cutouts (MGM tree id link broken)
	* tagged MuonTrackingGeometry-00-00-36

2007-03-13 Sarka Todorova <sarka.todorova@cern.ch>
	* station layer representation identified
	* tagged MuonTrackingGeometry-00-00-35

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* fixed csc layer identification
	* tagged MuonTrackingGeometry-00-00-34

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* collected material for station layer representation
	* clean-up printout 
	* tagged MuonTrackingGeometry-00-00-33

2007-03-12 Sarka Todorova <sarka.todorova@cern.ch>
	* remove error messages from BooleanConstructor
	  ( originate from GeoShape.volume(), replaced by MSTB::getVolume() )
	* tagged MuonTrackingGeometry-00-00-32

2007-02-23 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix (MSB)  
	* tagged MuonTrackingGeometry-00-00-31

2007-02-22 Sarka Todorova <sarka.todorova@cern.ch>
	* update MTGB for change of interface ('empty' volumes)
	* update MSB for changes in MuonGeoModel 
	* tagged MuonTrackingGeometry-00-00-30

2007-02-16 Sarka Todorova <sarka.todorova@cern.ch>
	* layer identification upgrade
	* tagged MuonTrackingGeometry-00-00-29

2007-02-12 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix (station name abbreviation)
	* detailed layer identification optional
	* tagged MuonTrackingGeometry-00-00-28

2007-02-07 Sarka Todorova <sarka.todorova@cern.ch>
        * inert objects enclosed in envelopes, treated as confined dense volumes
	* tagged MuonTrackingGeometry-00-00-27 

2007-02-01 Sarka Todorova <sarka.todorova@cern.ch>
        * fix slc4 compilation error
	* tagged MuonTrackingGeometry-00-00-26 

2007-01-31 Sarka Todorova <sarka.todorova@cern.ch>
	* layer representation added for stations (without material at the moment)